# algoritmos-y-estructuras-de-datos-iii

./: .gitignore  ejercicio1.cpp  ejercicio2.cpp
TP1/Ejercicio 1/: CMakeLists.txt  main.cpp
TP1/Ejercicio 2/: CMakeLists.txt
TP1/ejercicio1/: CMakeLists.txt  cuadrado_magico.cpp  cuadrado_magico.h  main.cpp
TP1/ejercicio2/: main.cpp
tp-1/: CMakeLists.txt
tp-1/ejercicio-1/: bt-cola.cpp  bt.cpp  cuadrado_magico.cpp  cuadrado_magico.h
tp-1/ejercicio-2/: operaciones.cpp  polinomio_resto.cpp  polinomio_resto.h
tp-1/ejercicio-3/: actividades.cpp  time_algorithm.cpp
tp-1/ejercicio-3/experimentacion/: README.md  generate_random_instances.py  output_sorted.csv  output_unsorted.csv  time_algorithm  time_algorithm.cpp
tp-1/ejercicio-3/experimentacion/inputs/: input.csv  input_sorted.csv  input_unsorted.csv
tp-1/ejercicio-3/inputs/: input.csv
tp-2/chumacero-fernandez/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp
tp-2/ej1/: explicacion  mejorado.cpp  puentes.cpp
tp-2/ej2/: casos  domino  domino.cpp
tp-2/ej3/: modems.cpp
tp-2/ej3/experimentacion/: README.md  experimentacion.ipynb  generate_random_instances (Copia en conflicto de luli-81F5 2023-05-31).py  generate_random_instances.py  output.csv  output_by_rank.csv  output_by_size.csv  output_with_path_compression.csv  time_algorithm  time_algorithm.cpp
tp-2/ej3/experimentacion/inputs/: input.csv
tp-3/ej1/: ej1  ej1.cpp
